[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Enemies/Ghost/ghost_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/Ghost/ghost_light.png" type="Texture" id=2]
[ext_resource path="res://Resources/Enemies/Ghost/ghost.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("GhostSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.4, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.701, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, -25.868 ), Vector2( -1, -25.868 ), Vector2( 0.3, -25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:range_item_cull_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GhostSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GhostSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.1, -25.014 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D:range_item_cull_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=3]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GhostSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GhostSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.719, -25.014 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D:range_item_cull_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GhostSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GhostSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.688, -25.205 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D:range_item_cull_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GhostSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.413, -25.868 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:range_item_cull_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 3, 1 ),
"update": 0,
"values": [ 0.06, 0.08 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 3, 1 ),
"update": 0,
"values": [ 0.9, 1.1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D/SpriteLight (Correção):scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.06, 0.06 ), Vector2( 0.08, 0.08 ) ]
}

[sub_resource type="Animation" id=7]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.06, 0.08 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1, 1.6, 2, 2.6, 3, 3.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.5, 0.0, 1.3, 0.0, 1.7, 0.0, 1.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D/SpriteLight (Correção):scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.06, 0.06 ), Vector2( 0.08, 0.08 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.9 ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="CircleShape2D" id=10]
radius = 104.307

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 5.31344, 4.60249 )

[node name="Ghost" type="KinematicBody2D"]
position = Vector2( 0, 1 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="GhostSprite" type="Sprite" parent="."]
light_mask = 4
scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 1 )
offset = Vector2( 0, -16 )
vframes = 4
hframes = 4
frame = 12

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 1, -25.868 )
texture = ExtResource( 2 )
texture_scale = 0.06
energy = 0.0
range_item_cull_mask = 3

[node name="SpriteLight (Correção)" type="Sprite" parent="Light2D"]
modulate = Color( 1, 0, 0, 0.117647 )
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Doubt = SubResource( 1 )
anims/Down_Walk = SubResource( 2 )
anims/Left_Walk = SubResource( 3 )
anims/Right_Walk = SubResource( 4 )
anims/Up_Walk = SubResource( 5 )

[node name="AnimationPlayerL" type="AnimationPlayer" parent="."]
anims/Light = SubResource( 6 )
anims/Light_Chaos = SubResource( 7 )
anims/Light_FadeIn = SubResource( 8 )
anims/Light_FadeOut = SubResource( 9 )
next/Light_FadeIn = "Light"

[node name="RayCast" type="RayCast2D" parent="."]
enabled = true

[node name="RayCast2" type="RayCast2D" parent="."]
enabled = true

[node name="RayCast3" type="RayCast2D" parent="."]
enabled = true

[node name="RayCast4" type="RayCast2D" parent="."]
enabled = true

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource( 10 )

[node name="TimerRandom" type="Timer" parent="."]
wait_time = 160.0
autostart = true

[node name="Delay" type="Timer" parent="TimerRandom"]
wait_time = 10.0
one_shot = true

[node name="TimerDoubt" type="Timer" parent="."]
wait_time = 1.7
one_shot = true

[node name="GhostCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9 )
shape = SubResource( 11 )
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
[connection signal="timeout" from="TimerRandom" to="." method="_on_TimerRandom_timeout"]
[connection signal="timeout" from="TimerRandom/Delay" to="." method="_on_Delay_timeout"]
[connection signal="timeout" from="TimerDoubt" to="." method="_on_TimerDoubt_timeout"]
